--- a/Practica.css
+++ b/Practica.css
@@ -1,57 +1,32 @@
-h1{
-    color: red;
-}
-
-h3{
-    color: #f30101 ;
-    border: 2px  #f30101 solid;
-    background-color: #ffffff;
-    width: 435px;
-    font-family: 'Pacifico', cursive;
-    font-size: 20px;
-}
-
-div{
-    border: 2px  #f72004 solid;
-    height: 50;
-    width: 500px;
-    background-color: #f9fbfd;
-    border-radius: 5px;
-    margin: left;
-    border-width: 3px;
-    text-align: left;
-}
-
-img{
-    height: 75px;
-    margin-left: 75px;
-
-    display: block; /* Hace que la imagen se muestre como un bloque */
-    margin: 0 auto; /* Centrar la imagen horizontalmente */
-}
-
-/* Estilos CSS para centrar el h1 y la imagen debajo */
 body {
-    text-align: center; /* Centrar el texto en el cuerpo */
+    margin: 0;
 }
 
 h1, h2, h3 {
-    text-align: center; /* Centrar el texto en el h1 */
-    font-family: sans-serif
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.top{
-    min-width: 600px;
-    max-width: 600px; /* Establece un ancho máximo para el contenedor */
-    margin: 0 auto; /* Margen automático a la izquierda y derecha para centrar horizontalmente */
+header{
+    margin-bottom: 20px;
+    display: flex;
+    background-color: rgb(214, 12, 12);
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
 
-    display: flex; /* Utiliza flexbox para centrar verticalmente el contenido */
-    flex-direction: column; /* Apila los elementos verticalmente */
-    justify-content: center; /* Centra verticalmente el contenido */
-    align-items: center; /* Centra horizontalmente el contenido */
+header img{
+    height: 75px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
 
-    text-align: center; /* Centrar el contenido horizontalmente */
-    background-color: #1e3a8a; /* Cambia el color de fondo a azul oscuro */
-    color: #ffffff; /* Cambia el color del texto a blanco */
-    padding: 20px; /* Añade relleno para separar el contenido del contenedor */
+.title{
+    margin: 0 auto;
+    text-align: center;
+    border: 2px solid rgb(214, 12, 12);
+    border-radius: 25px;
+    height: fit-content;
+    width: fit-content;
+    padding: 0 10px;
 }
