--- a/Practica.css
+++ b/Practica.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    background-color: grey;
 }
 
 h1, h2, h3 {
@@ -24,9 +25,15 @@ header img{
 .title{
     margin: 0 auto;
     text-align: center;
-    border: 2px solid rgb(214, 12, 12);
-    border-radius: 25px;
     height: fit-content;
     width: fit-content;
-    padding: 0 10px;
+}
+
+.plantilla{
+    background-color: white;
+    margin: 0 5%;
+    padding: 0 20px;
+    border: 2px solid rgb(214, 12, 12);
+    border-radius: 25px;
+
 }
