--- a/Practica.css
+++ b/Practica.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: grey;
+    background-color: #f0f0f0;
 }
 
 h1, h2, h3 {
@@ -10,15 +10,16 @@ h1, h2, h3 {
 header{
     margin-bottom: 20px;
     display: flex;
-    background-color: rgb(214, 12, 12);
+    background-color: black;
     align-items: center;
     gap: 20px;
     padding: 20px;
+    color: rgb(214, 12, 12);
 }
 
 header img{
     height: 75px;
-    border: 2px solid black;
+    border: 2px solid rgb(214, 12, 12);
     border-radius: 5px;
 }
 
@@ -33,7 +34,7 @@ header img{
     background-color: white;
     margin: 0 5%;
     padding: 0 20px;
-    border: 2px solid rgb(214, 12, 12);
+    border: 1px solid #ccc;
     border-radius: 25px;
 
 }
