--- a/Practica.css
+++ b/Practica.css
@@ -1,10 +1,10 @@
+html {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
 body {
     margin: 0;
     background-color: #f0f0f0;
-}
-
-html {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 header{
@@ -23,38 +23,35 @@ header img{
     border-radius: 5px;
 }
 
-.title{
-    margin: 0 auto;
-    text-align: center;
-    height: fit-content;
-    width: fit-content;
-}
-
 .squad{
     background-color: white;
-    margin: 0 10%;
-    padding: 0 20px;
+    margin: 20px 15%;
+    padding: 20px;
     border: 1px solid #ccc;
     border-radius: 25px;
+}
 
+.title{
+    margin: 0 auto;
+    width: fit-content;
 }
 
 .players{
     display: grid;
+    padding: 20px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 40px 40px;
+    gap: 40px;
     justify-items: center;
 }
 
 .players a{
     text-align: center;
-    padding: 10px 0;
     border: 1px solid #ccc;
     border-radius: 10px;
+    padding: 10px 0;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
-    min-width: 200px;
     
-    text-decoration: none;  /* Para quitar el link */
+    text-decoration: none;
     color: black;
     font-size: 20px;
     
@@ -70,17 +67,16 @@ header img{
     box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.5);
 }
 
-.button{
-    text-align: center; 
-    margin: 50px auto;
+.button{ 
+    margin: 20px auto;
+    width: fit-content;
+    background-color: rgb(214, 12, 12);
+    padding: 10px;
+    border-radius: 15px;
 }
 
 .button a{
-    border-radius: 15px;
-    padding: 10px;
-    background-color: rgb(214, 12, 12);
-
-    text-decoration: none;  /* Para quitar el link */
+    text-decoration: none;
     color: white;
     font-size: 18px;
 }
