--- a/plantilla.css
+++ b/plantilla.css
@@ -40,6 +40,7 @@ header{
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 25px;
+    text-align: center;
 }
 
 .title{
@@ -61,11 +62,11 @@ header{
     border-radius: 10px;
     padding: 10px 0;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
-    
+
     text-decoration: none;
     color: black;
     font-size: 20px;
-    
+
     transition: box-shadow 0.2s;
 }
 
@@ -78,16 +79,38 @@ header{
     box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.5);
 }
 
-.button{ 
-    margin: 20px auto;
-    width: fit-content;
+.btn{
+    margin: 20px;
+    padding: 10px 0px; /* Apaño porque si podemos ajustar el width al content, pero height no*/
+    width: auto;
+    min-width: 80px;
+
     background-color: rgb(214, 12, 12);
-    padding: 10px;
+    border-right-color: rgb(214, 12, 12);
+    border-bottom-color: rgb(214, 12, 12);
+    border-top-color: rgb(264, 62, 62);
+    border-left-color: rgb(264, 62, 62);
     border-radius: 15px;
+
+    transition: background-color 0.2s;
 }
 
-.button a{
+.btn a{
+    padding: 10px;
+    border-radius: 15px;
+
     text-decoration: none;
     color: white;
     font-size: 18px;
+}
+
+.btn:hover{
+    background-color: rgb(202, 0, 0);
+}
+
+.btn:active{
+    border-right-color: rgb(264, 62, 62);
+    border-bottom-color: rgb(264, 62, 62);
+    border-top-color: rgb(214, 12, 12);
+    border-left-color: rgb(214, 12, 12);
 }
