--- a/ficha.css
+++ b/ficha.css
@@ -1,27 +1,13 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 20px;
+.container{
+    width: 400px;
+    margin: auto;
 }
 
-.ficha {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 20px;
-    width: 300px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-img {
+.container img {
     margin-top: 10px;
-    width: 200px;
+    height: 250px;
 }
 
 p {
-    margin-top: 20px;
     text-align: left;
-    margin: 5px 0;
 }
