Ficha + Historial en Flexbox
Hasta aquí tenía hecho de ayer en clase, pero lo que dije, antes necesitaba arreglar el margen de la cabecera

--- a/ficha.css
+++ b/ficha.css
@@ -1,7 +1,12 @@
+.data{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
 .container{
     width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 20px;
 }
 
 .container img {
