--- a/Formulario.css
+++ b/Formulario.css
@@ -30,8 +30,8 @@ label {
 
 .input-group label {
     display: block;
+    font-size: 200px;
 }
-
 .input-group input {
     width: 100%;
     padding: 10px;
@@ -56,7 +56,18 @@ label {
     margin-top: 20px /*lo de margin-top es para dejar espacio entre el botón guardar y el resto del formulario*/
 }
 
-.btn-salir {
+.btn-cancelar {
+    margin-top: 20px; /* para separar el botón del resto del formulario*/
+    padding: 10px 20px;
+    background-color: #E74C3C;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 10px;
+    
+}
+.btn-cancelar {
     margin-top: 20px; /* para separar el botón del resto del formulario*/
     padding: 10px 20px;
     background-color: #E74C3C;
