--- a/Formulario.css
+++ b/Formulario.css
@@ -45,46 +45,23 @@ label {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
-    .progress-bar { /* para que cuando pulses la barra te salga una manita encima*/
-        cursor: pointer;
-     }
-
-  .progress-label {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #000;
-  }
-
-
-  .progress-container { /*para poner los valores en la barra*/
-    position: relative;
-    margin-top: 20px; /* Separa el valor de los $ de la barra de progreso */
-  }
-
-  
-/*para colocar los valores en la izquierda, en el centro y en la derecha*/
-  .progress-label-start {
-    left: 0;
-    transform: translateY(-50%);
-  }
-
-  .progress-label-middle {
-    left: 50%;
-    transform: translate(-23%, -50%);
-  }
-
-  .progress-label-end {
-    right: 0;
-    transform: translate(30%, -50%);/*esto es para mover el valor de 60 millones(la primera coordenada es la X y la segunda la Y)*/
-  }
 /* Estilo para los botones */
 .btn{
-    margin:10px;
+    margin:10px;/*separación entre los botones guardar y salir*/
     width: fit-content;
+    
 }
+.btn-guardarprecio{ /*para modificar el botón de guardar precio*/
+    padding: 3px 3px;
+    background-color: #07090b;
+    color: #e10d0d;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 20px; /*para modificar la posición del botón guardar precio*/
+    margin-top: -2%; 
 
+}
 .btn-guardar { /*para retocar el boton guardar, también se podría haber puesto button y retocarlo en general{...}*/
     padding: 10px 20px;
     background-color: #007BFF;
@@ -92,8 +69,9 @@ label {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-right: 10px;
-    margin-top: 20px /*lo de margin-top es para dejar espacio entre el botón guardar y el resto del formulario*/
+    margin-top: 20px;
+    margin-left: 35%; /*para mover los dos botones guardar y salir al centro del formulario, justo debajo del botón guardar precio*/
+     /*lo de margin-top es para dejar espacio entre el botón guardar y el resto del formulario*/
 }
 
 .btn-cancelar {
@@ -104,20 +82,10 @@ label {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-right: 10px;
-    
 }
-.btn-cancelar {
-    margin-top: 20px; /* para separar el botón del resto del formulario*/
-    padding: 10px 20px;
-    background-color: #E74C3C;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-right: 10px;
-    
-}
-.botones-container {
-    display: inline; /* Muestra los botones en línea */
+.botones-container  {
+    display: flex; /*para que los botones guardar y salir esten en línea*/
+    flex-direction: row;
+    align-items: center; /* Muestra los botones en línea */
+      
 }
