--- a/plantilla.css
+++ b/plantilla.css
@@ -1,12 +1,13 @@
 .players{
     display: grid;
     padding: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 40px;
     justify-items: center;
 }
 
 .players a{
+    width: 250px;
     text-align: center;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -22,7 +23,7 @@
 
 .players img{
     height: 250px;
-    max-width: 200px;
+    max-width: 250px;
 }
 
 .players a:hover{
