--- a/base.css
+++ b/base.css
@@ -15,21 +15,15 @@ header {
         gap: 20px;
         color: rgb(214, 12, 12);
 
-        position: fixed;
+        position: sticky;
         top: 0;
-        left: 0;
-        right: 0;
+        z-index: 1;
 }
 
 #header-img {
         height: 75px;
         border: 2px solid rgb(214, 12, 12);
         border-radius: 5px;
-}
-
-.header-fake {
-        /* Lo suyo sería obtener en una variable la altura de header e insertarla aquí */
-        height: 99px; /* = (2*10) + 75 + (2*2) = padding + img + border img */
 }
 
 .container {
