--- a/ficha.css
+++ b/ficha.css
@@ -6,7 +6,7 @@
 }
 
 .container{
-    width: 400px;
+    width: 500px;
     margin: 20px;
 }
 
@@ -21,20 +21,28 @@ p {
 
 table{
     margin: 20px auto;
-    border-collapse: collapse;
 }
 
-th, td{
+.teams{
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.teams th, .teams td{
     border-bottom: 1px black solid;
     padding: 10px 20px;
-    align-items: center;
 }
 
-th {
+.teams th {
     background-color:  rgb(214, 12, 12);
     color: white;
 }
 
 .item img{ /* Al parecer, si no meto la imagen en un div, height no funciona bien */
     height: 50px;
+}
+
+.player-form{
+    text-align: left;
+    margin-bottom: 0px; /*No entiendo porque no se solapa con el margen del boton*/
 }
