--- a/base.css
+++ b/base.css
@@ -7,6 +7,12 @@ body {
         background-color: #f0f0f0;
 }
 
+p {
+        text-align: justify;
+        margin-right: 20px;
+        margin-left: 20px;
+}
+
 header {
         display: flex;
         padding: 10px 20px;
