--- a/base.css
+++ b/base.css
@@ -48,6 +48,7 @@ header {
         min-width: 80px;
 
         background-color: rgb(214, 12, 12);
+        border: 2px solid;
         border-right-color: rgb(214, 12, 12);
         border-bottom-color: rgb(214, 12, 12);
         border-top-color: rgb(264, 62, 62);
@@ -55,9 +56,7 @@ header {
         border-radius: 15px;
 
         transition: background-color 0.2s;
-}
 
-.btn a {
         padding: 10px;
         border-radius: 15px;
 
@@ -68,6 +67,10 @@ header {
 
 .btn:hover {
         background-color: rgb(202, 0, 0);
+        border-right-color: rgb(214, 12, 12);
+        border-bottom-color: rgb(214, 12, 12);
+        border-top-color: rgb(264, 62, 62);
+        border-left-color: rgb(264, 62, 62);
 }
 
 .btn:active {
