--- a/ficha.css
+++ b/ficha.css
@@ -6,12 +6,11 @@
 }
 
 .container {
-    width: 500px;
     margin: 20px;
+    max-width: 800px;
 }
 
 #player-photo {
-    margin-top: 10px;
     height: 250px;
 }
 
