--- a/base.css
+++ b/base.css
@@ -1,4 +1,4 @@
-h2{
+h2 {
         margin-bottom: 20px;
 }
 
@@ -38,11 +38,22 @@ header {
         padding: 20px;
         width: 80%;
         max-width: none;
-        
+
         background-color: white;
         border: 1px solid #ccc;
         border-radius: 25px;
         text-align: center;
+}
+
+form {
+        text-align: left;
+        margin: 20px; /*No entiendo porque no se solapa con el margen del boton*/
+}
+
+.form-group label {
+        margin-top: 15px;
+        font-weight: bold;
+        color: rgb(214, 12, 12);
 }
 
 .btn {
