--- a/base.css
+++ b/base.css
@@ -7,11 +7,11 @@ h1, h2 {
 }
 
 h1 {
-        font-size: 40px;
+        font-size: 45px;
 }
 
 h2 {
-        font-size: 30px;
+        font-size: 35px;
         margin-bottom: 20px;
 }
 
@@ -70,23 +70,23 @@ form {
         color: rgb(214, 12, 12);
 }
 
-.form-btn {
+.btn-cont {
         display: flex;
         justify-content: center;
 }
 
-.btn {
+.btn-cont > .btn {
         margin: 20px;
-        padding: 10px;
+        padding: 5px;
         min-width: 110px;
 
-        border: 2px solid;
-        border-radius: 10px;
-        border-right-color: rgb(214, 12, 12);
-        border-bottom-color: rgb(214, 12, 12);
+        border: 4px solid;
+        border-radius: 5px;
+
+        background-color: rgb(214, 12, 12);
+        border-color: rgb(214, 12, 12);
         border-top-color: rgb(264, 62, 62);
         border-left-color: rgb(264, 62, 62);
-        background-color: rgb(214, 12, 12);
 
         transition: background-color 0.2s;
 
@@ -95,20 +95,19 @@ form {
         font-size: 18px;
 }
 
-.btn:hover {
+.btn-cont > .btn:hover {
         background-color: rgb(202, 0, 0);
-        border-right-color: rgb(214, 12, 12);
-        border-bottom-color: rgb(214, 12, 12);
         border-top-color: rgb(264, 62, 62);
         border-left-color: rgb(264, 62, 62);
         color: white;
 }
 
-.btn:active {
-        border-right-color: rgb(264, 62, 62);
+.btn-cont > .btn:active {
+        background-color: rgb(214, 12, 12);
+        border-color: rgb(214, 12, 12);
         border-bottom-color: rgb(264, 62, 62);
-        border-top-color: rgb(214, 12, 12);
-        border-left-color: rgb(214, 12, 12);
+        border-right-color: rgb(264, 62, 62);
+        color: white;
 }
 
 .bi-person-fill-add {
