--- a/views/ficha.html
+++ b/views/ficha.html
@@ -48,7 +48,7 @@
             <div class="btn-cont">
                 <button type="button" class="btn"><i class="bi bi-pencil"></i> Editar</button>
                 <button type="button" class="btn"><i class="bi bi-trash"></i> Eliminar</button>
-                <a href="plantilla.html" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
+                <a href="/" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
             </div>
         </div>
 
