Metido las cosas relativas a editar y la página de los mensajes

--- a/views/playerEdited.html
+++ b/views/playerEdited.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Mensajes</title>
-	<meta charset="utf-8">
+    <title>Ficha editar</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -19,8 +19,10 @@
 
       </style>
 </head>
+
 <body>
-	<div class="container mt-5">
+    
+    <div class="container mt-5">
         <p>{{mensaje}}</p>
         <a href="../ficha.html?id={{id}}"> <button  class="btn2 ">Volver</a>
         </div>
