--- a/views/ficha.html
+++ b/views/ficha.html
@@ -4,6 +4,9 @@
 <head>
     <title>Ficha de {{player.name}}</title>
 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css?family=Vina+Sans|Kanit" rel="stylesheet" type="text/css">
@@ -41,8 +44,11 @@
             </div>
 
             <div class="btn-cont">
-                <button type="button" class="btn"><i class="bi bi-pencil"></i> Editar</button>
-                <button type="button" class="btn"><i class="bi bi-trash"></i> Eliminar</button>
+                <a href="/editar.html?id={{id}}" class="btn"><i class="bi bi-pencil"></i> Editar</a>
+                <form action ="/jugador/{id}/borrar" method = 'post'>
+                    <input type="hidden" name="id" value="{{id}}">
+                    <button type="button" class="btn"><i class="bi bi-trash"></i> Eliminar</button>
+                </form>
                 <a href="/" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
             </div>
         </div>
@@ -72,27 +78,34 @@
             </table>
 
             <form role="form">
-                <div class="form-group">
-                    <label for="emblem">Escudo</label>
-                    <input type="file" class="form-control" id="emblem">
-                </div>
-                <div class="form-group">
-                    <label for="team">Club</label>
-                    <input type="text" class="form-control" id="team" placeholder="Nombre del equipo">
-                </div>
-                <div class="form-group row">
-                    <label for="stage">Etapa</label>
-                    <div class="col-sm-6 col-xs-12">
-                        <input type="number" class="form-control" id="start-stage" placeholder="Primer año">
-                    </div>
-                    <div class="col-sm-6 col-xs-12">
-                        <input type="number" class="form-control" id="end-stage" placeholder="Último año">
-                    </div>
-                </div>
-
-                <div class="btn-cont">
-                    <button type="button" class="btn"><i class="bi bi-plus-lg"></i> Añadir nuevo equipo</button>
-                </div>
+                <form action = "/nuevoSubElemento" method="post" >
+                        <div class="form-group">
+                            <label for="emblem">Escudo</label>
+                            <input type="file" class="form-control" id="emblem">
+                        </div>
+                        <div class="form-group">
+                            <label for="team">Club</label>
+                            <input type="text" class="form-control" id="team" placeholder="Nombre del equipo">
+                        </div>
+                        <div class="form-group row">
+                            <label for="stage">Etapa</label>
+                            <div class="col-sm-6 col-xs-12">
+                                <input type="number" class="form-control" id="start-stage" placeholder="Primer año">
+                            </div>
+                            <div class="col-sm-6 col-xs-12">
+                                <input type="number" class="form-control" id="end-stage" placeholder="Último año">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <input type="hidden" name="id" value="{{id}}">
+                        </div>
+                        <div class="btn-cont">
+                            <button type="submit" class="btn"><i class="bi bi-plus-lg"></i> Añadir nuevo equipo</button> <!--con type=submit se guarda el equipo-->
+                        </div>
+                        <div class ="btn-cont">
+                            <button type="button" class="btn"><i class="fas fa-times"></i> Cancelar</button>
+                        </div>
+                </form>
             </form>
         </div>
     </div>
