--- a/views/mensajes.html
+++ b/views/mensajes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Mensajes</title>
+        <title> Mensajes</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -10,6 +10,7 @@
     
     
     <link type="text/css" rel="stylesheet" href="base.css" />
+    <link type="text/css" rel="stylesheet" href="ficha.css" />
     <style>
         
         
@@ -22,7 +23,7 @@
 <body>
 	<div class="container mt-5">
         <p>{{mensaje}}</p>
-        <a href="../ficha.html?id={{id}}"> <button  class="btn2 ">Volver</a>
+        <a href="../ficha.html?id={{id}}"class="btn" role="button"><i class="bi bi-box-arrow-left"></i>">Volver</a>
         </div>
 </body>
 </html>
