--- a/views/playerEdited.html
+++ b/views/playerEdited.html
@@ -10,6 +10,7 @@
     
     
     <link type="text/css" rel="stylesheet" href="base.css" />
+    <link type="text/css" rel="stylesheet" href="ficha.css" />
     <style>
         
         
@@ -24,7 +25,7 @@
     
     <div class="container mt-5">
         <p>{{mensaje}}</p>
-        <a href="../ficha.html?id={{id}}"> <button  class="btn2 ">Volver</a>
+        <a href="../ficha.html?id={{id}}"class="btn" role="button"><i class="bi bi-box-arrow-left"></i>">Volver</a>
         </div>
 </body>
 </html>
