--- a/views/mensajes.html
+++ b/views/mensajes.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <title> Mensajes</title>
-	<meta charset="utf-8">
+    <title>{{title}}</title>
+
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css?family=Vina+Sans|Kanit" rel="stylesheet" type="text/css">
-    
-    
-    <link type="text/css" rel="stylesheet" href="base.css" />
-    <link type="text/css" rel="stylesheet" href="ficha.css" />
-    <style>
-        
-        
-        
-        
-    
 
-      </style>
+    <link type="text/css" rel="stylesheet" href="base.css" />
 </head>
+
 <body>
-	<div class="container mt-5">
-        <p>{{mensaje}}</p>
-        <a href="../ficha.html?id={{id}}"class="btn" role="button"><i class="bi bi-box-arrow-left"></i>">Volver</a>
-        </div>
+    <div class="container mt-5">
+        <p>{{message}}</p>
+        <a href="/" class="btn" role="button"><i class="bi bi-box-arrow-left"></i>Volver</a>
+        <!--mensajes original tenía: "../ficha.html?id={{id}}"-->
+        <!--player edited tenía: href="../ficha?id={{id}}"-->
+    </div>
 </body>
 </html>
