La ficha de cada jugador se muestra correctamente
Si saco el id con params el css se rompe, pero con query parece ser que todo va bien.
También he tocado el nombre del jugador en la ficha porque, como digo en el comentario, el tipo de letra no se lleva bien con las tildes y rompe la estética.

--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -29,7 +29,7 @@
 
         <div class="players">
             {{#players}}
-            <a href="ficha">
+            <a href="ficha?id={{id}}">
                 <img src="imagenes/players/{{photo}}" alt="{{name}}">
                 <p>{{name}}</p>
             </a>
