--- a/views/ficha.html
+++ b/views/ficha.html
@@ -27,7 +27,7 @@
 
     <div class="data">
         <div class="container">
-            <h2>{{player.name}}</h2>
+            <h2>{{name}}</h2>
 
             <div class="row">
                 <div class="col-md-4">
@@ -101,9 +101,6 @@
                         </div>
                         <div class="btn-cont">
                             <button type="submit" class="btn"><i class="bi bi-plus-lg"></i> Añadir nuevo equipo</button> <!--con type=submit se guarda el equipo-->
-                        </div>
-                        <div class ="btn-cont">
-                            <button type="button" class="btn"><i class="fas fa-times"></i> Cancelar</button>
                         </div>
                 </form>
             </form>
