--- a/views/mensajes.html
+++ b/views/mensajes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>{{title}}</title>
 
@@ -11,14 +12,26 @@
     <link href="https://fonts.googleapis.com/css?family=Vina+Sans|Kanit" rel="stylesheet" type="text/css">
 
     <link type="text/css" rel="stylesheet" href="base.css" />
+    <link type="text/css" rel="stylesheet" href="mensajes.css" />
 </head>
 
 <body>
-    <div class="container mt-5">
+    <header>
+        <div>
+            <img id="header-img" src="imagenes/Escudo.jpeg" alt="Escudo del Triplano FC">
+        </div>
+        <div>
+            <h1>Triplano FC</h1>
+        </div>
+    </header>
+    <div class="container">
         <p>{{message}}</p>
-        <a href="/" class="btn" role="button"><i class="bi bi-box-arrow-left"></i>Volver</a>
+        <div class="btn-cont">
+            <a href="/" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
+        </div>
         <!--mensajes original tenía: "../ficha.html?id={{id}}"-->
         <!--player edited tenía: href="../ficha?id={{id}}"-->
     </div>
 </body>
+
 </html>
