--- a/views/ficha.html
+++ b/views/ficha.html
@@ -44,7 +44,7 @@
             </div>
 
             <div class="btn-cont">
-                <a href="/editar.html?id={{id}}" class="btn"><i class="bi bi-pencil"></i> Editar</a>
+                <a href="/editar?id={{player.id}}" class="btn"><i class="bi bi-pencil"></i> Editar</a>
                 <a href="/borrar?id={{player.id}}" type="button" class="btn"><i class="bi bi-trash"></i> Eliminar</a>
                 <a href="/" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
             </div>
