--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Plantilla Triplano</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -37,7 +38,7 @@
         </div>
 
         <div class="btn-cont">
-            <a href="formulario.html" class="btn" role="btn"><i class="bi bi-person-fill-add"></i> Inscribir nuevo jugador</a>
+            <a href="formulario" class="btn" role="btn"><i class="bi bi-person-fill-add"></i> Inscribir nuevo jugador</a>
         </div>
     </section>
 
