--- a/views/ficha.html
+++ b/views/ficha.html
@@ -44,8 +44,8 @@
             </div>
 
             <div class="btn-cont">
-                <a href="/editar?id={{player.id}}" class="btn"><i class="bi bi-pencil"></i> Editar</a>
-                <a href="/borrar?id={{player.id}}" type="button" class="btn"><i class="bi bi-trash"></i> Eliminar</a>
+                <a href="/editar?id={{player.id}}" class="btn" role="button"><i class="bi bi-pencil"></i> Editar</a>
+                <a href="/borrar?id={{player.id}}" class="btn" role="button"><i class="bi bi-trash"></i> Eliminar</a>
                 <a href="/" class="btn" role="button"><i class="bi bi-box-arrow-left"></i> Volver</a>
             </div>
         </div>
@@ -74,32 +74,34 @@
                 </tbody>
             </table>
 
-            <form role="form">
-                <form action="/nuevoSubElemento" method="post">
-                    <div class="form-group">
-                        <label for="emblem">Escudo</label>
-                        <input type="file" class="form-control" id="emblem">
+            <form role="form" action="subelementoCreado" method="post">
+                <div class="form-group">
+                    <label for="emblem">Escudo</label>
+                    <input type="file" class="form-control" id="emblem">
+                </div>
+
+                <div class="form-group">
+                    <label for="team">Club</label>
+                    <input type="text" class="form-control" id="team" placeholder="Nombre del equipo">
+                </div>
+
+                <div class="form-group row">
+                    <label for="stage">Etapa</label>
+                    <div class="col-sm-6 col-xs-12">
+                        <input type="number" class="form-control" id="start-stage" placeholder="Primer año">
                     </div>
-                    <div class="form-group">
-                        <label for="team">Club</label>
-                        <input type="text" class="form-control" id="team" placeholder="Nombre del equipo">
+                    <div class="col-sm-6 col-xs-12">
+                        <input type="number" class="form-control" id="end-stage" placeholder="Último año">
                     </div>
-                    <div class="form-group row">
-                        <label for="stage">Etapa</label>
-                        <div class="col-sm-6 col-xs-12">
-                            <input type="number" class="form-control" id="start-stage" placeholder="Primer año">
-                        </div>
-                        <div class="col-sm-6 col-xs-12">
-                            <input type="number" class="form-control" id="end-stage" placeholder="Último año">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <input type="hidden" name="id" value="{{id}}">
-                    </div>
-                    <div class="btn-cont">
-                        <button type="submit" class="btn"><i class="bi bi-plus-lg"></i> Añadir nuevo equipo</button>
-                    </div>
-                </form>
+                </div>
+
+                <div class="form-group">
+                    <input type="hidden" name="id" value="{{id}}">
+                </div>
+
+                <div class="btn-cont">
+                    <button type="submit" class="btn"><i class="bi bi-plus-lg"></i> Añadir nuevo equipo</button>
+                </div>
             </form>
         </div>
     </div>
