Recepción de atributos del subelemento arreglado

--- a/views/ficha.html
+++ b/views/ficha.html
@@ -88,10 +88,10 @@
                 <div class="form-group row">
                     <label for="stage">Etapa</label>
                     <div class="col-sm-6 col-xs-12">
-                        <input type="number" class="form-control" id="start-stage" placeholder="Primer año">
+                        <input type="number" class="form-control" id="start" placeholder="Primer año">
                     </div>
                     <div class="col-sm-6 col-xs-12">
-                        <input type="number" class="form-control" id="end-stage" placeholder="Último año">
+                        <input type="number" class="form-control" id="end" placeholder="Último año">
                     </div>
                 </div>
 
