Ausencia de (sub)elementos contemplada

--- a/views/ficha.html
+++ b/views/ficha.html
@@ -71,6 +71,9 @@
                         <td>{{stage.start}}-{{stage.end}}</td>
                     </tr>
                     {{/subelems}}
+                    {{^subelems}}
+                    <tr><td></td><td>Sin equipos conocidos</td><td></td></tr>
+                    {{/subelems}}
                 </tbody>
             </table>
 
