--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -35,6 +35,9 @@
                 <p>{{name}}</p>
             </a>
             {{/players}}
+            {{^players}}
+            <p>No hay jugadores fichados aún</p>
+            {{/players}}
         </div>
 
         <div class="btn-cont">
