--- a/views/mensajes.html
+++ b/views/mensajes.html
@@ -18,12 +18,17 @@
 <body>
     <header>
         <div>
-            <img id="header-img" src="imagenes/Escudo.jpeg" alt="Escudo del Triplano FC">
+            <a href="/">
+                <img id="header-img" src="imagenes/Escudo.jpeg" alt="Escudo del Triplano FC">
+            </a>
         </div>
         <div>
-            <h1>Triplano FC</h1>
+            <a href="/" style="color: inherit; text-decoration: none">
+                <h1>Triplano FC</h1>
+            </a>
         </div>
     </header>
+
     <div class="container">
         <p>{{message}}</p>
         <div class="btn-cont">
