--- a/views/formulario.html
+++ b/views/formulario.html
@@ -73,7 +73,7 @@
 
             <div class="form-group">
                 <label for="player-photo">Foto de perfil</label>
-                <input type="file" class="form-control" name="photo">
+                <input type="text" class="form-control" name="photo" placeholder="Add URL for player profile">
             </div>
 
             <div class="form-group">
