Cambio ficha para emblema url texto

--- a/views/ficha.html
+++ b/views/ficha.html
@@ -84,7 +84,7 @@
             <form role="form" action="subelementoCreado" method="post">
                 <div class="form-group">
                     <label for="emblem">Escudo</label>
-                    <input type="file" class="form-control" name="emblem">
+                    <input type="text" class="form-control" name="emblem" placeholder="Add URL for new emblem ">
                 </div>
 
                 <div class="form-group">
