--- a/views/formulario.html
+++ b/views/formulario.html
@@ -47,11 +47,11 @@
                 <div class="form-group col-md-6 col-sm-12">
                     <label for="position">Posición</label>
                     <select class="form-select" name="position">
-                        <option value="" disabled selected hidden>Banquillo</option>
-                        <option value="1">Delantero</option>
-                        <option value="2">Medio</option>
-                        <option value="3">Defensa</option>
-                        <option value="3">Portero</option>
+                        <option value="Banquillo" selected hidden>Banquillo</option>
+                        <option value="Delantero">Delantero</option>
+                        <option value="Medio">Medio</option>
+                        <option value="Defensa">Defensa</option>
+                        <option value="Portero">Portero</option>
                     </select>
                 </div>
                 <div class="form-group col-md-6 col-sm-12">
